crates/parser/tests/snapshots/parser_test__field_access.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: P
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 14
                    - 17
      deriving: []
      span:
        - 0
        - 19
  - DefFn:
      name: f
      visibility: Private
      params:
        - name: p
          ty:
            Named:
              name: P
              span:
                - 29
                - 30
          span:
            - 26
            - 30
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 35
            - 38
      body:
        FieldAccess:
          expr:
            Var:
              name: p
              span:
                - 41
                - 42
          field: x
          span:
            - 41
            - 44
      span:
        - 20
        - 44
