crates/parser/tests/snapshots/parser_test__float_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"3.14\")"
---
Lit:
  value:
    Float: 3.14
  span:
    - 0
    - 4
