crates/parser/tests/snapshots/parser_test__function_call.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 9
                - 12
          span:
            - 6
            - 12
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 17
            - 20
      body:
        App:
          func:
            Var:
              name: add
              span:
                - 23
                - 26
          args:
            - Var:
                name: x
                span:
                  - 27
                  - 28
            - Lit:
                value:
                  Int: 1
                span:
                  - 30
                  - 31
          span:
            - 23
            - 32
      span:
        - 0
        - 32
