crates/parser/tests/snapshots/parser_test__impl.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(impl Eq Point (def eq [a b] (and (== (. a x) (. b x)) (== (. a y) (. b y)))))\")"
---
decls:
  - DefImpl:
      trait_name: Eq
      target_type:
        Named:
          name: Point
          span:
            - 9
            - 14
      type_constraints: []
      methods:
        - name: eq
          visibility: Private
          params:
            - name: a
              ty: ~
              span:
                - 24
                - 25
            - name: b
              ty: ~
              span:
                - 26
                - 27
          constraints: []
          return_type: ~
          body:
            App:
              func:
                Var:
                  name: and
                  span:
                    - 30
                    - 33
              args:
                - BinaryOp:
                    op: Eq
                    lhs:
                      FieldAccess:
                        expr:
                          Var:
                            name: a
                            span:
                              - 41
                              - 42
                        field: x
                        span:
                          - 38
                          - 45
                    rhs:
                      FieldAccess:
                        expr:
                          Var:
                            name: b
                            span:
                              - 49
                              - 50
                        field: x
                        span:
                          - 46
                          - 53
                    span:
                      - 34
                      - 54
                - BinaryOp:
                    op: Eq
                    lhs:
                      FieldAccess:
                        expr:
                          Var:
                            name: a
                            span:
                              - 62
                              - 63
                        field: y
                        span:
                          - 59
                          - 66
                    rhs:
                      FieldAccess:
                        expr:
                          Var:
                            name: b
                            span:
                              - 70
                              - 71
                        field: y
                        span:
                          - 67
                          - 74
                    span:
                      - 55
                      - 75
              span:
                - 29
                - 76
          span:
            - 15
            - 77
      span:
        - 0
        - 78
