crates/parser/tests/snapshots/parser_test__import.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(import core.option [Option Some None])\")"
---
decls:
  - Import:
      path: core.option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 0
        - 39
