crates/parser/tests/snapshots/parser_test__int_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"42\")"
---
Lit:
  value:
    Int: 42
  span:
    - 0
    - 2
