crates/parser/tests/snapshots/parser_test__let.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"(let x 42)\")"
---
Let:
  name: x
  value:
    Lit:
      value:
        Int: 42
      span:
        - 7
        - 9
  body: ~
  span:
    - 0
    - 10
